Yeun.zhang 12-07 当日首次提交   解决：小秘书、活动详情、门店详情页模块与登录页面的逻辑跳转的诸多问题

--- a/res/layout/activity_bd.xml
+++ b/res/layout/activity_bd.xml
@@ -2,18 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
-    android:background="@color/white">
+    android:background="@color/white"
+   >
+
+    <!-- <com.android.pc.ioc.image.RecyclingImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/listbg"
+        android:scaleType="fitXY" />  -->
 
     <com.android.pc.ioc.image.RecyclingImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/listbg"
-        android:scaleType="fitXY" />
-
-    <com.android.pc.ioc.image.RecyclingImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/listbg" />
+        android:src="@drawable/listbg" 
+        android:scaleType="centerCrop"/>
 
     <com.android.pc.ioc.image.RecyclingImageView
         android:id="@+id/iv_activity_back"
@@ -21,11 +23,12 @@
         android:layout_height="wrap_content"
         android:src="@drawable/back" />
 
-    <com.android.pc.ioc.image.RecyclingImageView
+     <com.android.pc.ioc.image.RecyclingImageView
         android:id="@+id/iv_bd_boom"
         style="@style/w_wrap_h_wrap"
-        android:layout_marginTop="@dimen/margin_top_680"
-        android:src="@anim/bd_boom" />
+        android:layout_marginTop="300dp"
+        android:src="@anim/bd_boom" 
+        android:visibility="gone"/><!-- android:layout_marginTop="@dimen/margin_top_680"  -->
 
     <com.android.pc.ioc.image.RecyclingImageView
         android:id="@+id/iv_bd_lr"
@@ -34,6 +37,7 @@
         android:layout_marginTop="@dimen/margin_top_610"
         android:scaleType="matrix"
         android:scrollX="@dimen/bd_l_r_45"
-        android:src="@drawable/listowl" />
-
+        android:src="@drawable/listowl" 
+        android:visibility="gone"/>
+    
 </RelativeLayout>
