--- a/res/layout/activity_edit_userinfo.xml
+++ b/res/layout/activity_edit_userinfo.xml
@@ -17,7 +17,9 @@
         android:background="@drawable/edit_bg_green"
         android:ems="10"
         android:inputType="textPersonName"
-        android:textColor="@color/text_gray1" >
+        android:textColor="@color/text_gray1"
+        android:textColorHint="@color/line_bg"
+        android:textSize ="14dp" >
 
         <requestFocus />
     </EditText>
