--- a/res/layout/dialog_setting_secretary.xml
+++ b/res/layout/dialog_setting_secretary.xml
@@ -16,8 +16,10 @@
         android:paddingBottom="@dimen/margin_top_32" >
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:scaleType="fitXY"
             android:src="@drawable/secretary_setting_dialog_bg" />
 
         <TextView
