--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -30,9 +30,11 @@
     <color name="text_gray3">#898989</color>
     <color name="text_gray4">#939393</color>
     
+    <color name="update_text_tittle_green">#9DC14F</color>
     <color name="text_black_1">#212121</color>
     <color name="text_black_2">#545454</color>
     <color name="images_counts">#75000000</color>
     <color name="choose_eara_item_press_color">#2000</color>
+    
 
 </resources>
