--- a/res/layout/activity_mine_secretary_list.xml
+++ b/res/layout/activity_mine_secretary_list.xml
@@ -68,8 +68,10 @@
                 android:layout_height="match_parent"
                 android:background="#EBEBEB"
                 android:cacheColorHint="#00000000"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
                
-                android:dividerHeight="10dp"
+                android:dividerHeight="15dp"
                 android:divider="@color/app_bg"
                 android:listSelector="@android:color/transparent"
                 android:scrollbars="none"
