--- a/res/layout/activity_store_list.xml
+++ b/res/layout/activity_store_list.xml
@@ -31,7 +31,7 @@
                 android:layout_height="1px"
                 android:background="@color/line_bg" />
 
-            <com.lansun.qmyo.view.MyListView
+            <com.lansun.qmyo.view.ActivityMyListView
                 android:id="@+id/lv_stores_content"
                 style="@style/w_h_full"
                 android:cacheColorHint="#00000000"
