--- a/res/layout/activity_activity_detail.xml
+++ b/res/layout/activity_activity_detail.xml
@@ -585,7 +585,8 @@
                 android:id="@+id/iv_activity_detail_report_list"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/item_h_90" 
-                ><!-- android:visibility="gone" -->
+                
+                ><!--android:visibility="gone"  -->
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -690,7 +691,7 @@
                 android:divider="@null"
                 android:listSelector="@android:color/transparent"
                 android:scrollbars="none" >
-            </com.lansun.qmyo.view.MySubListView>
+            </com.lansun.qmyo.view.MySubListView><!-- android:visibility="gone"  -->
 
             <include layout="@layout/report" />
         </LinearLayout>
