--- a/res/layout/activity_new_comment.xml
+++ b/res/layout/activity_new_comment.xml
@@ -11,7 +11,75 @@
 
         <include layout="@layout/activity_com" />
 
+        <RelativeLayout 
+            android:id="@+id/rl_title_write"
+            android:paddingLeft="15dp" 
+            android:paddingRight="15dp" 
+            android:paddingBottom="15dp" 
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2px"
+            android:orientation="vertical"
+            android:background="@drawable/rectangle_white_top_corner"
+            android:layout_marginLeft="15dp"
+        	android:layout_marginRight="15dp"
+        	android:layout_marginTop="15dp">
+	       
+            
+            <LinearLayout
+                android:layout_marginTop="15dp"
+                android:layout_centerInParent="true"
+                android:id="@+id/ll_rt"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:orientation="vertical">
+	            <RatingBar 
+	                android:id="@+id/rb_room_ratingbar"
+	                android:layout_gravity="center_horizontal"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:numStars="5"
+	                android:rating="0"
+	                
+	                style="@style/roomRatingBar"/>
+	            <TextView 
+	                android:id="@+id/tv_rb_room_ratingbar_counts"
+	                android:layout_marginTop="15dp"
+	                android:layout_height="wrap_content"
+	                android:layout_width="wrap_content"
+	                android:text="请对活动评分"
+	                android:layout_gravity="center_horizontal"/>
+	         </LinearLayout>
+	         
+            
+            
+            <RelativeLayout 
+                android:id="@+id/rl_ratingbar_count"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_toRightOf="@id/ll_rt" 
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="5dp">
+	            <TextView
+	                android:id="@+id/tv_big_num"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:text="0"
+	                android:textSize="20dp"
+	                android:textColor="@color/update_text_tittle_green" />
+	            
+	            <TextView
+	                 android:layout_width="wrap_content"
+	                 android:layout_toRightOf="@id/tv_big_num"
+		             android:layout_height="wrap_content"
+		             android:text=".0"
+		             android:textColor="@color/update_text_tittle_green"/>
+            </RelativeLayout>
+        </RelativeLayout>
+        
         <EditText
+            android:layout_marginLeft="15dp"
+        	android:layout_marginRight="15dp"
             android:id="@+id/et_new_comment_content"
             style="@style/text_style_nomal_28"
             android:layout_width="match_parent"
@@ -19,20 +87,37 @@
             android:background="@color/app_white"
             android:ems="10"
             android:gravity="top|left"
-            android:hint="@string/new_comment_tip"
+            android:hint="@string/new_comment_tip2"
             android:paddingLeft="@dimen/l_r_35"
             android:paddingRight="@dimen/l_r_35"
             android:paddingTop="@dimen/margin_top_35" 
-            android:maxLength="1000">
+            android:maxLength="500">
 
             <requestFocus />
         </EditText>
+        
+        <TextView 
+            android:layout_marginLeft="15dp"
+        	android:layout_marginRight="15dp" 
+            android:id="@+id/tv_wait_input_counts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/wait_input_counts"
+            style="@style/text_style_nomal_20"
+            android:layout_gravity="right"
+            android:background="@color/app_white"
+            android:paddingBottom="5dp"
+            android:paddingRight="5dp"
+            android:gravity="right"
+            />
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_top_35"
-            android:background="@color/app_white" >
+            android:layout_marginLeft="15dp"
+        	android:layout_marginRight="15dp"
+            android:layout_marginTop="2px"
+            android:background="@drawable/rectangle_white_bottom_corner" ><!--  android:layout_marginTop="@dimen/margin_top_35" -->
 
             <com.lansun.qmyo.view.MyGridView
                 android:id="@+id/gv_new_comment_images"
@@ -52,7 +137,8 @@
                 android:id="@+id/ll_new_comment_upload"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal" 
+                android:background="@drawable/rectangle_white_bottom_corner">
 
                 <LinearLayout
                     android:layout_width="@dimen/upload_photo_w"
