--- a/res/layout/activity_secretary.xml
+++ b/res/layout/activity_secretary.xml
@@ -19,6 +19,9 @@
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:orientation="vertical"
+       android:clickable="false"
+       android:longClickable="false"
+       
        />
 
 <RelativeLayout 
