--- a/res/layout/my_secretary_ask_multianswer_item.xml
+++ b/res/layout/my_secretary_ask_multianswer_item.xml
@@ -5,6 +5,7 @@
     android:background="#EBEBEB"
     android:orientation="vertical" >
     <RelativeLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/store_detail_head_h"
