--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -28,8 +28,12 @@
        android:focusableInTouchMode="false"
        app:orientation="vertical"
        android:clickable="false"
-       android:longClickable="false"/>
+       android:longClickable="false"
+       />
   
+   
+   
+   
 	    <RelativeLayout
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"
