--- a/res/layout/activity_secretary.xml
+++ b/res/layout/activity_secretary.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent" />  -->
         
         
-   <com.ryanharter.viewpager.ViewPager
+   <com.ryanharter.viewpager.NoTouchViewPager
        android:id="@+id/vp_sercretary_bg_pager"
        style="@style/w_h_full"
        android:focusable="false"
