--- a/res/layout/secretary_travel_fragment.xml
+++ b/res/layout/secretary_travel_fragment.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="旅游度假"
+            android:text="@string/travel_holiday"
             android:textColor="@color/app_green1"
             style="@style/text_style_big_40"
             />
