--- a/res/layout/store_detail_head_item.xml
+++ b/res/layout/store_detail_head_item.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<!-- <com.android.pc.ioc.image.RecyclingImageView xmlns:android="http://schemas.android.com/apk/res/android"
+ <com.android.pc.ioc.image.RecyclingImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/iv_detail"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" /> -->
+    android:layout_height="wrap_content" /> 
     
-    <com.jj.drag.DragImageView xmlns:android="http://schemas.android.com/apk/res/android"
+   <!--  <com.jj.drag.DragImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/iv_detail"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"  -->
+
