--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -23,6 +23,7 @@
     <color name="btntextcolor">#ff1E90FF</color>
     <color name="line_bg2">#DBDBDB</color>
     <color name="line_bg1">#EBEBEB</color>
+    <color name="line_bg3">#E5E5E5</color>
     <color name="app_circle_gray">#9C9C9C</color>
     <color name="text_gray1">#6F6F6F</color>
     <color name="pink">#e91e63</color>
