Yeun.zhang 2016-01-08 版本 1.2.14.1
提交内容涉及：私人秘书和登录注册页底部云图的动态显示、活动收藏和门店收藏的侧滑不灵敏的bug修复

--- a/res/layout/activity_activity.xml
+++ b/res/layout/activity_activity.xml
@@ -92,6 +92,7 @@
         android:listSelector="@android:color/transparent"
         android:scrollbarFadeDuration="1000"
         android:scrollbars="vertical" 
+        android:overScrollMode="never"
         />
     
 
