--- a/res/drawable/tv_style_white.xml
+++ b/res/drawable/tv_style_white.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:shape="rectangle">
 
     <solid android:color="@color/app_white" />
 
-    <corners android:radius="5dp" />
+    <corners android:radius="10dp" />
 
     <!-- <padding
         android:bottom="5dp"
