--- a/res/layout/activity_bank_card.xml
+++ b/res/layout/activity_bank_card.xml
@@ -108,7 +108,8 @@
             android:cacheColorHint="#00000000"
             android:divider="@null"
             android:dividerHeight="@dimen/margin_top_35"
-            android:scrollbars="none" />
+            android:scrollbars="none" 
+            android:overScrollMode="never"/>
     </LinearLayout>
 
     <LinearLayout
