--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res/com.lansun.qmyo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
-       android:background="@color/app_white" >
+       android:background="@color/app_white" > 
 
 <FrameLayout 
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/app_white"
     android:orientation="vertical" >
 
@@ -28,12 +27,8 @@
        android:focusableInTouchMode="false"
        app:orientation="vertical"
        android:clickable="false"
-       android:longClickable="false"
-       />
+       android:longClickable="false"/>
   
-   
-   
-   
 	    <RelativeLayout
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"
@@ -230,4 +225,4 @@
     
  
    </FrameLayout> 
-</ScrollView>
+ </ScrollView> 
