--- a/res/layout/activity_search_empty.xml
+++ b/res/layout/activity_search_empty.xml
@@ -18,8 +18,8 @@
         android:id="@+id/bt_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_top_30"
-        android:src="@drawable/lv_empty" />
+        android:layout_marginTop="@dimen/margin_top_20"
+        android:src="@drawable/lv_empty_new" />
 
     <TextView
         android:id="@+id/tv_found_secretary"
