--- a/res/layout/activity_secretary.xml
+++ b/res/layout/activity_secretary.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res/com.lansun.qmyo"
     android:layout_width="match_parent"
@@ -20,9 +19,7 @@
        android:focusableInTouchMode="false"
        app:orientation="vertical"
        android:clickable="false"
-       android:longClickable="false"
-       
-       />
+       android:longClickable="false"/>
 
 <RelativeLayout 
     style="@style/w_full_h_wrap"
@@ -65,19 +62,32 @@
                 android:gravity="center"
                 android:text="迈界小秘书"
                 android:textColor="@color/app_white" />
-            <TextView
-                android:id="@+id/tv_secretary_tip1"
-                style="@style/text_style_small_22"
-                android:layout_below="@+id/tv_secretary_name"
-                android:layout_centerHorizontal="true"
-                android:text="请选择一个类别事项，让我快速帮您解决吧"
-                android:layout_marginTop="@dimen/margin_top_15" />
+            
+           <LinearLayout
+               android:layout_centerHorizontal="true" 
+               android:id="@+id/ll_secretary_tip"
+               android:layout_below="@id/tv_secretary_name"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal">
+	             <TextView
+	                android:id="@+id/tv_secretary_tip1"
+	                style="@style/text_style_small_22"
+	                android:text="总裁大大"
+	                android:layout_marginTop="@dimen/margin_top_15" />
+	            <TextView
+	                android:id="@+id/tv_secretary_tip2"
+	                style="@style/text_style_small_22"
+	                android:text="，请选个任务吧"
+	                android:layout_marginTop="@dimen/margin_top_15" />
+           </LinearLayout>
 
+           
             <LinearLayout
                 android:id="@+id/ll_secretary_ll1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_secretary_tip1"
+                android:layout_below="@id/ll_secretary_tip"
                 android:layout_marginTop="@dimen/margin_top_35"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal" >
@@ -228,7 +238,9 @@
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
-<RelativeLayout
+    
+    
+	<RelativeLayout
                 android:id="@+id/relativeLayout1"
                 android:layout_alignParentTop="true"
                 android:layout_width="match_parent"
